Fix container layout on mobile landscape orientation

--- a/_sass/_reflow.scss
+++ b/_sass/_reflow.scss
@@ -21,7 +21,7 @@
 	}
 
 	.page-wrapper, .footer-wrapper {
-		max-width: 28em;
+		max-width: 30em;
 	}
 	.footer-module {
 
